<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.demoapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_tensorFlowRegonizationFragment"
            app:destination="@+id/tensorFlowFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_share"
            app:destination="@+id/nav_share" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.demoapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_galleryDetail"
            app:destination="@id/galleryDetail"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.demoapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.demoapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.demoapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.demoapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/tensorFlowFragment"
        android:name="com.example.demoapplication.ui.tensorflow.TensorFlowRegonizationFragment"
        android:label="" />
    <fragment
        android:id="@+id/galleryDetail"
        android:name="com.example.demoapplication.ui.gallerydetail.GalleryDetailFragment"
        android:label="GalleryDetail">
        <argument
            android:name="galleryItem"
            app:argType="com.example.demoapplication.data.model.GalleryImage" />
    </fragment>
</navigation>