<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:lineSpacingMultiplier="1.25"
        android:text="@string/android_platform_details_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tensor_flow_flower_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:scaleType="fitXY"
        android:transitionName="tensor_flow_header_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:srcCompat="@drawable/sunflower" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tensorflow_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/android_ml_title_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tensor_flow_flower_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tensor_flow_flower_image"
        app:layout_constraintTop_toTopOf="@+id/tensor_flow_flower_image" />

</androidx.constraintlayout.widget.ConstraintLayout>